<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>undur</groupId>
	<artifactId>JavaMonitorFramework</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<name>JavaMonitor Framework</name>
	<properties>
		<webobjects.group>com.webobjects</webobjects.group>
		<webobjects.version>5.4.3</webobjects.version>

		<wonder.core.group>wonder.core</wonder.core.group>
		<wonder.version>8.0.0.slim-SNAPSHOT</wonder.version>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<encoding>utf8</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>${wonder.core.group}</groupId>
			<artifactId>ERExtensions</artifactId>
			<version>${wonder.version}</version>
		</dependency>
		<dependency>
			<groupId>${webobjects.group}</groupId>
			<artifactId>JavaWebObjects</artifactId>
			<version>${webobjects.version}</version>
		</dependency>
	</dependencies>
</project>